Cameras Now Enable, Rotate And Translate according to config file

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -303,7 +303,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.ActionMappings.Extra Camera Swapping,InputSettings.Bindings.ActionMappings.Swap To Chase Camera,InputSettings.Bindings.ActionMappings.DEBUG BOAT SWAP,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis,InputSettings.Bindings.AxisMappings.Sail Tension Axis
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 BoxComponent=
-BPRegatta_C=
+BPRegatta_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 PropertyWrapper=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 SceneComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
@@ -402,8 +402,12 @@ calculateAndSetNewMovementVector=StaticMeshComponent.Collision.Collision,BoxComp
 setNewMovementVector=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 addTorque=
 addTorque_9=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4
-CameraComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
+CameraComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values
+Activate Cameras From Config=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Activate Cameras From Config_7=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Apply Config Camera Settings=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Apply Config Camera Settings_31=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 
 [EditorStartup]
 LastLevel=/Game/Levels/LVTesting
@@ -415,8 +419,8 @@ Object="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
+ActorComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -1754,16 +1758,16 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -1778,10 +1782,10 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/Map/Materials/M_Line.M_Line
-OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
-OpenAssetsAtExit=/Game/Map/BP_Buoy.BP_Buoy
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
-OpenAssetsAtExit=/Game/Map/PhysicsEngine.PhysicsEngine
+OpenAssetsAtExit=/Game/Map/tutorial_tabel.tutorial_tabel
+OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
+OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 
 [MessageLog]
 LastLogListing=PIE
@@ -1847,21 +1851,21 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Map/PhysicsEngine
-MRUItem1=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem2=/Game/Map/BP_Buoy
-MRUItem3=/Game/Map/BP_Start
-MRUItem4=/Game/Map/Materials/M_Line
-MRUItem5=/Game/Levels/LVTesting
-MRUItem6=/Game/Map/tutorial_tabel
-MRUItem7=/Game/Map/tutorialStracture
-MRUItem8=/Game/Map/Materials/M_Line_Instance
-MRUItem9=/Game/Map/Materials/M_BuoyBody
-MRUItem10=/Game/Map/Materials/M_Glow
-MRUItem11=/Game/Blueprints/Regatta/BPRegatta
-MRUItem12=/Game/Blueprints/Gamemodes/RegattaTesting
-MRUItem13=/Game/Map/BP_Tile
-MRUItem14=/Game/Map/MapGenerator
+MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem1=/Game/Map/MapGenerator
+MRUItem2=/Game/Blueprints/Regatta/BPRegatta
+MRUItem3=/Game/Map/tutorial_tabel
+MRUItem4=/Game/Map/PhysicsEngine
+MRUItem5=/Game/Map/BP_Buoy
+MRUItem6=/Game/Map/BP_Start
+MRUItem7=/Game/Map/Materials/M_Line
+MRUItem8=/Game/Levels/LVTesting
+MRUItem9=/Game/Map/tutorialStracture
+MRUItem10=/Game/Map/Materials/M_Line_Instance
+MRUItem11=/Game/Map/Materials/M_BuoyBody
+MRUItem12=/Game/Map/Materials/M_Glow
+MRUItem13=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem14=/Game/Map/BP_Tile
 MRUItem15=/Game/Levels/LV_Testing2
 MRUItem16=/Game/Levels/MainMenuMap
 MRUItem17=/Game/Minimap/MinimapWidget
@@ -3310,8 +3314,12 @@ D3D11RHI.TimeStamp=2024.10.01-11.17.01
 D3D11RHI.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2024.11.06-16.59.23
 SequencerWidgets.LastCompileMethod=External
-DataTableEditor.TimeStamp=2024.10.01-11.17.01
-DataTableEditor.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2024.11.06-16.59.17
+DataTableEditor.LastCompileMethod=External
+ChaosVehicles.TimeStamp=2024.11.06-17.07.27
+ChaosVehicles.LastCompileMethod=Unknown
+ChaosVehiclesEditor.TimeStamp=2024.11.06-17.07.27
+ChaosVehiclesEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
