--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,7 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1321,Y=990)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
@@ -175,6 +175,7 @@ MRUItem2=/Game/Levels/MainMenuMap
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -401,10 +402,14 @@ calculateAndSetNewMovementVector=StaticMeshComponent.Collision.Collision,BoxComp
 setNewMovementVector=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 addTorque=
 addTorque_9=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4
-CameraComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
+CameraComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values
 calculateNewSailAngle=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 setNewMovementVector_0=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Enable Cameras From Config=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Enable Cameras From Config_7=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Transform Additional Cameras From Config=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+Transform Additional Cameras From Config_34=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 
 [EditorStartup]
 LastLevel=/Game/Levels/LVTesting
@@ -416,8 +421,8 @@ Object="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
+ActorComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -660,9 +665,9 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 BPRegatta_C=
 Pawn=
-BPRegattaController_C=
-PlayerController=
-Controller=
+BPRegattaController_C="\"Object.Camera Active Staus\" "
+PlayerController="\"Object.Camera Active Staus\" "
+Controller="\"Object.Camera Active Staus\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
@@ -1756,8 +1761,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -1782,7 +1787,6 @@ OpenAssetsAtExit=/Game/Map/Materials/M_Line.M_Line
 OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
 OpenAssetsAtExit=/Game/Map/BP_Buoy.BP_Buoy
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 
 [MessageLog]
 LastLogListing=PIE
@@ -1849,11 +1853,11 @@ AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/Regatta/BPRegatta
-MRUItem1=/Game/Map/PhysicsEngine
-MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem3=/Game/Map/BP_Buoy
-MRUItem4=/Game/Map/BP_Start
-MRUItem5=/Game/Map/Materials/M_Line
+MRUItem1=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem2=/Game/Map/BP_Buoy
+MRUItem3=/Game/Map/BP_Start
+MRUItem4=/Game/Map/Materials/M_Line
+MRUItem5=/Game/Map/PhysicsEngine
 MRUItem6=/Game/Levels/LVTesting
 MRUItem7=/Game/Map/tutorial_tabel
 MRUItem8=/Game/Map/tutorialStracture
@@ -2118,8 +2122,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2149,7 +2153,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=212.667 Y=80.000
+ScreenPosition=X=212.000 Y=80.000
 WindowSize=X=1276.000 Y=684.000
 InitiallyMaximized=True
 
@@ -3313,15 +3317,15 @@ SequencerWidgets.TimeStamp=2024.11.06-16.59.23
 SequencerWidgets.LastCompileMethod=External
 DataTableEditor.TimeStamp=2024.10.01-11.17.01
 DataTableEditor.LastCompileMethod=Unknown
-ChaosVehicles.TimeStamp=2024.09.22-10.35.47
-ChaosVehicles.LastCompileMethod=Unknown
-ChaosVehiclesEditor.TimeStamp=2024.09.22-10.35.47
-ChaosVehiclesEditor.LastCompileMethod=Unknown
+ChaosVehicles.TimeStamp=2024.11.06-17.07.27
+ChaosVehicles.LastCompileMethod=External
+ChaosVehiclesEditor.TimeStamp=2024.11.06-17.07.27
+ChaosVehiclesEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
