pridana orthogonalna mapa

--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -60,10 +60,10 @@
 +AxisConfig=(AxisKeyName="ValveIndex_Right_Trackpad_Force",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 bAltEnterTogglesFullscreen=True
 bF11TogglesFullscreen=True
-bUseMouseForTouch=False
+bUseMouseForTouch=True
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
-bCaptureMouseOnLaunch=True
+bCaptureMouseOnLaunch=False
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
@@ -87,7 +87,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Extra Camera Swapping",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
 +ActionMappings=(ActionName="Extra Camera Swapping",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Eight)
 +ActionMappings=(ActionName="Extra Camera Swapping",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
-+ActionMappings=(ActionName="Swap To Chase Camera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Swap To Chase Camera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="DEBUG BOAT SWAP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightBracket)
 +AxisMappings=(AxisName="Rudder Axis",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Rudder Axis",Scale=-1.000000,Key=D)
