--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -1862,8 +1862,9 @@ K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1885,15 +1886,10 @@ RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
-OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
-OpenAssetsAtExit=/Game/Map/BP_Buoy.BP_Buoy
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
-OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
+OpenAssetsAtExit=/Game/Map/tutorial_tabel.tutorial_tabel
 
 [MessageLog]
 LastLogListing=PIE
@@ -1967,28 +1963,28 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Minimap/MinimapWidget
-MRUItem1=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem2=/Game/Map/BP_Buoy
-MRUItem3=/Game/Map/BP_Start
-MRUItem4=/Game/Blueprints/Regatta/BPRegatta
-MRUItem5=/Game/Minimap/scroll
-MRUItem6=/Game/Minimap/MinimapMaterial
-MRUItem7=/Game/Levels/LVTesting
-MRUItem8=/Game/Levels/MainMenuMap
-MRUItem9=/Game/Blueprints/UI/MainMenuClass
-MRUItem10=/Game/Levels/ConfigurationMenuMap
-MRUItem11=/Game/Levels/OrthogonalMap
-MRUItem12=/Game/Minimap/sailboatIcon_Sprite
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Blueprints/Regatta/RegattaUI
-MRUItem15=/Game/Blueprints/UI/ConfigurationMenuClass
-MRUItem16=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem17=/Game/Levels/LV_Testing2
-MRUItem18=/Game/Minimap/BoatMinimapTextureRenderTarget2D
-MRUItem19=/Game/Map/Materials/M_Line
-MRUItem20=/Game/Map/PhysicsEngine
-MRUItem21=/Game/Map/tutorial_tabel
+MRUItem0=/Game/Map/tutorial_tabel
+MRUItem1=/Game/Minimap/MinimapWidget
+MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem3=/Game/Map/BP_Buoy
+MRUItem4=/Game/Map/BP_Start
+MRUItem5=/Game/Blueprints/Regatta/BPRegatta
+MRUItem6=/Game/Minimap/scroll
+MRUItem7=/Game/Minimap/MinimapMaterial
+MRUItem8=/Game/Levels/LVTesting
+MRUItem9=/Game/Levels/MainMenuMap
+MRUItem10=/Game/Blueprints/UI/MainMenuClass
+MRUItem11=/Game/Levels/ConfigurationMenuMap
+MRUItem12=/Game/Levels/OrthogonalMap
+MRUItem13=/Game/Minimap/sailboatIcon_Sprite
+MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem15=/Game/Blueprints/Regatta/RegattaUI
+MRUItem16=/Game/Blueprints/UI/ConfigurationMenuClass
+MRUItem17=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem18=/Game/Levels/LV_Testing2
+MRUItem19=/Game/Minimap/BoatMinimapTextureRenderTarget2D
+MRUItem20=/Game/Map/Materials/M_Line
+MRUItem21=/Game/Map/PhysicsEngine
 MRUItem22=/Game/Map/tutorialStracture
 MRUItem23=/Game/Map/Materials/M_Line_Instance
 MRUItem24=/Game/Map/Materials/M_BuoyBody
@@ -2391,7 +2387,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=212.000 Y=80.000
-WindowSize=X=1279.200 Y=687.200
+WindowSize=X=1280.800 Y=688.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3565,9 +3561,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
 SuppressInputDeviceConnectionChangeNotification=True
