--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -95,7 +95,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Sail Tension Axis",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
+DefaultTouchInterface=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
