--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1932,Y=1070)
+LastSize=(X=1934,Y=1080)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
-NewWindowWidth=1932
-NewWindowHeight=1070
+NewWindowWidth=1934
+NewWindowHeight=1080
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentScalingGridSize=5
@@ -375,7 +375,7 @@ GameplayTagsDeveloperSettings=EnhancedInputDeveloperSettings.Modifier Default Va
 LogVisualizerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis
 StaticMeshActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 RegattaUI_C=
-BPRegattaController_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+BPRegattaController_C=
 K2Node_GetInputAxisValue=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_InputAxisEvent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_CallFunction=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
@@ -672,9 +672,9 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 BPRegatta_C=
 Pawn=
-BPRegattaController_C="\"Object.MouseInterface.ClickEventKeys\" "
-PlayerController="\"Object.MouseInterface.ClickEventKeys\" "
-Controller="\"Object.MouseInterface.ClickEventKeys\" "
+BPRegattaController_C=
+PlayerController=
+Controller=
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
@@ -1862,10 +1862,10 @@ K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1889,11 +1889,7 @@ RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
-OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
-OpenAssetsAtExit=/Game/Map/BP_Buoy.BP_Buoy
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
-OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
 
 [MessageLog]
 LastLogListing=PIE
@@ -1967,8 +1963,8 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Minimap/MinimapWidget
-MRUItem1=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem1=/Game/Minimap/MinimapWidget
 MRUItem2=/Game/Map/BP_Buoy
 MRUItem3=/Game/Map/BP_Start
 MRUItem4=/Game/Blueprints/Regatta/BPRegatta
@@ -2359,8 +2355,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2391,7 +2387,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=212.000 Y=80.000
-WindowSize=X=1279.200 Y=687.200
+WindowSize=X=1280.800 Y=688.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
