Unpossesed boats now move + Cinematic camera + Janky boat switching

--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -89,6 +89,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Extra Camera Swapping",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
 +ActionMappings=(ActionName="Swap To Chase Camera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="DEBUG BOAT SWAP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightBracket)
++ActionMappings=(ActionName="Swap To Cinematic Camera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +AxisMappings=(AxisName="Rudder Axis",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Rudder Axis",Scale=-1.000000,Key=D)
 +AxisMappings=(AxisName="Sail Tension Axis",Scale=1.000000,Key=W)
