--- a/Unreal Engine/Sailing/Config/DefaultEngine.ini
+++ b/Unreal Engine/Sailing/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/Game/Levels/LVTesting.LVTesting
+GameInstanceClass=/Game/Blueprints/SailingGameInstance.SailingGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
